# tetherand

./: .gitignore  LICENSE  LICENSE.md  Makefile  README.md  backup.sh  connect.sh  restore.sh  tutorial.sh
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/schemas/dev.tetherand.app.threat.model.ThreatDb/: 1.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/tetherand/app/: Binary.java  CIDR.java  Forwarder.java  IPPacketOutputStream.java  InvalidCIDRException.java  Net.java  Notifier.java  PersistentRelayTunnel.java  RelayTunnel.java  RelayTunnelListener.java  RelayTunnelProvider.java  TetherandActivity.java  TetherandService.java  Tunnel.java  VpnConfiguration.java
android/app/src/main/java/supranational/blst/: BLST_ERROR.java  P1.java  P1_Affine.java  P2.java  P2_Affine.java  PT.java  Pairing.java  Scalar.java  SecretKey.java  blst.java  blstJNI.java
android/app/src/main/kotlin/dev/tetherand/app/: MainActivity.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/clipboard/: ClipboardScrubberService.kt  PromptInjectionRegex.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/egress/: EgressLlmApiWatch.kt  LlmApiWatchlist.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/fieldguide/: ConferenceFieldGuide.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/npu/: NpuSysWatcher.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/osint/: OsintExposureProbe.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/perplexity/: PerplexityRule.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/phishing/: PhishingRule.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/provenance/: ProvenanceChecker.kt
android/app/src/main/kotlin/dev/tetherand/app/aiguard/runtime/: AiGuardRuntime.kt  ModelBundle.kt  ModelUpdater.kt
android/app/src/main/kotlin/dev/tetherand/app/chain/: BridgeRotation.kt  BridgeRotationCard.kt  ChainOrchestrator.kt  DirectHop.kt  Hop.kt  NymHop.kt  PtBinaryStager.kt  QuicSocket.kt  ShadowsocksSocket.kt  TcpPacketBuilder.kt  TorFlowForwarder.kt  TorHop.kt  WgSocket.kt  WireGuardConfig.kt  WireGuardHop.kt
android/app/src/main/kotlin/dev/tetherand/app/crypto/: ActivityFingerprint.kt  BeaconPolicy.kt  BeaconPolicyCard.kt  BootIntegrity.kt  DrandVerifier.kt  Kmac.kt  MtcVerifier.kt  PublicBeacons.kt  SecureBytes.kt  SeekerRng.kt
android/app/src/main/kotlin/dev/tetherand/app/hardened/: AttestationSnapshot.kt  HardenedModeManager.kt  HardenedModeStore.kt
android/app/src/main/kotlin/dev/tetherand/app/mullvad/: DaitaMachines.kt  MullvadAccount.kt  MullvadApi.kt  MullvadConfigBuilder.kt  MullvadPqClient.kt  MullvadServer.kt  ObfuscationMode.kt
android/app/src/main/kotlin/dev/tetherand/app/net/: PinnedHttp.kt  TorProxyRegistry.kt
android/app/src/main/kotlin/dev/tetherand/app/nym/: NymConfig.kt  NymCredentials.kt
android/app/src/main/kotlin/dev/tetherand/app/service/: TetherandChainService.kt
android/app/src/main/kotlin/dev/tetherand/app/splittunnel/: InstalledApps.kt  SplitTunnelStore.kt
android/app/src/main/kotlin/dev/tetherand/app/tor/: TorBridges.kt  TorConfig.kt
android/app/src/main/kotlin/dev/tetherand/app/transport/: AoaAccessoryService.kt  BtRfcommServer.kt
android/app/src/main/kotlin/dev/tetherand/app/ui/: PrivacyScreen.kt  TabbedRoot.kt  TetherScreen.kt  Theme.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/xml/: aoa_accessory_filter.xml  data_extraction_rules.xml  network_security_config.xml  selfie_device_admin.xml
android/app/src/test/kotlin/dev/tetherand/app/chain/: TcpPacketBuilderTest.kt
docs/: BLST_VENDOR_NOTES.md  EMULATOR_PROOF_2026-05-31.md  EMULATOR_PROOF_2026-06-02.md  FORMAL_VERIFICATION.md  FORMAL_VERIFICATION_AUDIT.md  ai-guard.html  architecture.html  building.html  bundles.html  cli.html  faq.html  hardened-mode.html  index.html  installing.html  licensing.html  privacy-chain.html  roadmap.html  styles.css  threat-detection.html  verifying.html
docs/superpowers/plans/: 2026-05-26-tetherand-m1-tether-mvp.md  2026-05-27-tetherand-m3-privacy-chain-wireguard.md  2026-05-27-tetherand-m4-mullvad-pq.md  2026-05-27-tetherand-m4d-g-multihop-daita-obfs-split.md  2026-05-28-tetherand-m10-ai-era-defenses.md  2026-05-28-tetherand-m6-tor-arti.md  2026-05-28-tetherand-m6x-pts-forwarder.md  2026-05-28-tetherand-m7a-threat-detection-mvp.md  2026-05-28-tetherand-m9-hardened-mode.md  2026-05-29-tetherand-m2-m5-m7b-m7c-m8-finish.md
docs/superpowers/specs/: 2026-05-26-tetherand-design.md
relay/: Cargo.toml
relay/cli/: Cargo.toml
relay/cli/macos-bt-helper/: build.sh  tetherand-bt-bridge.swift
relay/cli/src/: main.rs  tui.rs
relay/codec/: Cargo.toml
relay/codec/src/: lib.rs
relay/core/: Cargo.toml  NOTICE
relay/nym/: Cargo.toml
relay/nym/src/: client.rs  jni.rs  lib.rs
relay/pt-bridge/: Cargo.toml
relay/pt-bridge/src/: main.rs  meek.rs  obfs4.rs  pt_protocol.rs  secure_rng.rs  socks5.rs  webtunnel.rs
relay/tor/: Cargo.toml  build.rs
relay/tor/src/: bridge.rs  client.rs  jni.rs  lib.rs  socks.rs
relay/tor/tests/: live_probe.rs
relay/transport-adb/: Cargo.toml
relay/transport-adb/src/: lib.rs
relay/transport-aoa/: Cargo.toml
relay/transport-aoa/src/: lib.rs
relay/transport-api/: Cargo.toml
relay/transport-api/src/: lib.rs
relay/transport-bt/: Cargo.toml
relay/transport-bt/src/: lib.rs
relay/transport-tcp/: Cargo.toml
relay/transport-tcp/src/: lib.rs
relay/wg/: Cargo.toml
relay/wg/src/: daita.rs  jni.rs  kem.rs  lib.rs  peer.rs  transport.rs
scripts/: 5364C13D-prep.sh  build-nym-android.sh  build-pt-bridge-android.sh  build-pts-android.sh  build-rtlsdr-android.sh  build-tor-android.sh  build-wg-android.sh  bundle-combinations.sh  com.tetherand.launcher.plist  defcon-prep.sh  gen-signing-keys.sh  hash-artifacts.sh  install-launchagent.sh  release-sign.sh  release-upload.sh  sign-manifest.sh  smoke-chain.sh  smoke-device.sh  smoke.sh  usb-watcher.sh
scripts/sdr_jni/: sdr_jni.c
(+63 files in other folders)
