[package]
name = "tetherand-codec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Tetherand transport frame codec"

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
