[package]
name = "tetherand-nym"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Nym SDK: high-level mixnet client (Sphinx + cover traffic) exposing a
# tokio-async surface. We use the WebSocket / TCP variants for the
# entry-mixnode connection; native QUIC ships in nym-sdk 1.6+.
#
# The `mixnet` feature pulls in the network client; we leave the
# `vpn` feature off because that requires the Linux/macOS Wireguard
# kernel module which doesn't apply on Android (we already have our
# own WG hop via M4).
# Nym SDK — `with-sdk` is now default-on. History:
#
# - **nym-sdk 1.4** failed to type-infer under rustc 1.85 (a
#   closure parameter the upstream nym-noise forgot to annotate).
# - **nym-sdk 1.21** (released 2026-05-11) compiles past the
#   nym-noise issue but trips a digest-crate version split:
#   blake3 1.8 adopted `digest 0.11` while nym-crypto + nym-sphinx-
#   anonymous-replies still used `digest 0.10` via hmac.
#
# **Local fix (2026-05-31):** vendored nym-crypto + nym-sphinx-
# anonymous-replies under `relay/vendored/` and ported them to the
# digest 0.11 / hmac 0.13 / hkdf 0.13 / sha2 0.11 era:
#
#   * digest 0.11 dropped the `digest::crypto_common` re-export —
#     imports now go through the standalone `crypto-common` crate.
#   * hkdf 0.13's `Hkdf<H>` is now a 1-generic alias for
#     `GenericHkdf<Hmac<H>>` (was 2-generic). The `SimpleHmac`
#     variant is now `SimpleHkdf<D>`.
#   * hmac 0.13 moved `new_from_slice` to the `KeyInit` trait —
#     callers must import it explicitly.
#   * digest 0.11 swapped `generic-array::GenericArray` for
#     `hybrid-array::Array` at the digest-output boundary. We
#     keep the public type `EncryptionKeyDigest` as `GenericArray`
#     (matching the legacy API surface) and convert at the
#     boundary inside `compute_digest` to avoid cascading
#     downstream-caller breakage.
#
# Workspace [patch.crates-io] block in `relay/Cargo.toml` routes
# the two vendored crates in. When upstream nym-sdk catches up with
# the digest 0.11 stack, drop the vendored copies and the patch
# block.
nym-sdk = { version = "1.21", default-features = false, optional = true }

tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "sync", "io-util"] }
log = "0.4"
android_logger = { version = "0.14", optional = true }
jni = "0.21"
once_cell = "1.20"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
hex = "0.4"

[features]
# `with-sdk` is now default-on — the local vendored-crate fix above
# unblocked the build. Opt out via `--no-default-features` to skip
# pulling the ~200-crate Nym dep tree (useful during fast iteration
# on unrelated code).
default = ["with-sdk"]
android = ["dep:android_logger"]
with-sdk = ["dep:nym-sdk"]
