[package]
name = "tetherand-pt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tetherand-pt"
path = "src/main.rs"

[dependencies]
# Tor PT spec: reads env, opens SOCKS5, dispatches per-protocol.
# The crate ships a single binary that speaks all 3 in-process PTs
# (obfs4, meek, webtunnel) via a protocols-arg dispatch table.

# Async runtime + I/O.
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# obfs4 crypto stack — Elligator2 + curve25519 + ntor + HMAC-SHA256
# + ChaCha20-Poly1305 cell framing.
curve25519-dalek = { version = "4", features = ["digest", "rand_core"] }
sha2 = "0.10"
# SHA-3 / SHAKE-256 for the secure_rng entropy mixer (FIPS-202).
sha3 = "0.10"
# Zeroize for explicit key-material wipe.
zeroize = { version = "1.8", features = ["zeroize_derive"] }
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
rand = "0.8"
rand_core = "0.6"
# getrandom is the lowest-level entropy source we mix; rand_core's
# OsRng wraps it but exposing it directly lets secure_rng absorb it
# without going through rand's higher-level abstractions.
getrandom = "0.2"
subtle = "2"
hex = "0.4"

# meek + webtunnel TLS stack — rustls + tokio bridge.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
http = "1.1"
httparse = "1.9"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
url = "2.5"
base64 = "0.22"

# Errors + logging.
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.20"
