[package]
name = "tetherand-transport-aoa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Android Open Accessory (AOA) transport for Tetherand. Host switches the Seeker into accessory mode via USB control transfers, then exchanges Tetherand frames over the bulk-IN/bulk-OUT endpoints."

[dependencies]
tetherand-transport-api = { path = "../transport-api" }
tetherand-codec = { path = "../codec" }
async-trait = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rusb = "0.9"
