[package]
name = "tetherand-wg"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
authors.workspace = true
description = "BoringTun WireGuard wrapper for Tetherand; cdylib targets arm64-android via NDK."

[lib]
name = "tetherand_wg"
crate-type = ["cdylib", "rlib"]

[dependencies]
boringtun = { version = "0.7", default-features = false }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
base64 = "0.22"
thiserror = { workspace = true }
log = "0.4"
rand = "0.8"                                                                  # for x25519_dalek (rand_core 0.6)
rand9 = { package = "rand", version = "0.9", features = ["std", "std_rng", "os_rng"] }  # for maybenot (rand_core 0.9)
ml-kem = { version = "0.3", features = ["getrandom"] }
rand_core = "0.10"
# M4 transport / DAITA / obfuscation crates
maybenot = "2.2"
shadowsocks = { version = "1.24", default-features = false, features = ["stream-cipher", "aead-cipher"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.7"
async-trait = "0.1"
tokio = { version = "1.43", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "sync"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.14"
